# near-erc20-connector

./: .catalog-info.yaml  .gitignore  CHANGELOG.md  README.md
.github/workflows/: contracts-near.yml  sigma-prime.yml
aurora/: .catalog-info.yaml  .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
aurora/.openzeppelin/: unknown-1313161554.json  unknown-1313161555.json
aurora/contracts/: IEvmErc20.sol  NearBridge.sol
aurora/ignition/: aurora_tesnet.params.json
aurora/ignition/modules/: Bridge.js
aurora/scripts/: aurora_mainnet.params.json  aurora_testnet.params.json  deploy.js  utils.js
eNear/: .catalog-info.yaml  hardhat.config.js  package.json
eNear/contracts/: AdminControlled.sol  Bridge.sol  TransparentUpgradeableProxyNear.sol  eNear.sol
eNear/contracts/mock/: eNearMock.sol
eNear/contracts/testing/: NearProverMock.sol  TransparentUpgradeableProxyMock.sol  eNearMock.sol
eNear/scripts/: 1_deploy_eNear.js  2_deploy_proxy_and_init_e_near.js  2_pause_e_near_method.js  3_upgrade_proxy.js
eNear/test/: eNear.erc20.test.js  eNear.test.js  proof_template.json  proof_template_invalid_executor.json
nearBridge/: .catalog-info.yaml  Cargo.toml  build.sh
nearBridge/res/: near_bridge.wasm
nearBridge/src/: lib.rs  lock_event.rs  prover.rs  transfer_to_near_event.rs
