[package]
name = "near_bridge"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.0.1"
near-contract-standards = "3.0.1"
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "3a5373168e720d237ab451e8d41e81010693f876" }
admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "3a5373168e720d237ab451e8d41e81010693f876" }
tiny-keccak = "1.4.0"
ethabi = "12.0.0"
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.64"
uint = { version = "0.8.3", default-features = false }
rlp = "0.4.2"
hex = "0.4.2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
