[package]
name = "near_bridge"
version = "1.0.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.6"
near-contract-standards = "4.0.0-pre.6"
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "88f4fb5" }
tiny-keccak = "1.4.0"
ethabi = "12.0.0"
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.64"
uint = { version = "0.8.3", default-features = false }
rlp = "0.4.2"
hex = "0.4.2"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", rev="9d17246b" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
