[package]
name = "near_bridge"
version = "2.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
eth-types =  { git = "https://github.com/near/rainbow-bridge", tag = "eth-types-0.1.0", default-features = false}
ethabi = "12.0.0"
rlp = "0.5.2"
hex = "0.4.3"
tiny-keccak = "1.4.0"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.1.0" }

[dev-dependencies]
uint = { version = "0.8.3", default-features = false }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
